[package]
name = "syncify_client"
description = "Allows you to sync objects with server"
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
version = "0.1.0"
 
[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
serde = "1.0.203"
