[package]
name = "syncify_core"
description = "Core functionality of syncify"
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
version = "0.1.0"
 
[dependencies]
bincode = "1.3.3"
flate2 = "1.0.30"
serde = {version = "1.0.203", features = [ "derive" ] }
