[package]
name = "syncify_server"
description = "Allows the creation and management of syncing server"
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
syncify_core = { path = "../syncify_core" }
